fixing size on mobile

--- a/website/style.css
+++ b/website/style.css
@@ -2,7 +2,8 @@
 /* light -> 300 _-_ medium -> 500  */
 
 html{
-    height: 100%;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
 }
 
 body{
